--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -11,12 +11,12 @@ KERNEL_VER ?= `uname -r`
 KDIR ?= /lib/modules/$(KERNEL_VER)/build
 
 release:
-	$(MAKE) CFLAGS_MODULE='-Os' -C $(KDIR) M=$$PWD
+	$(MAKE) CFLAGS_MODULE='-Os -fno-pie' -C $(KDIR) M=$$PWD
 	strip --strip-debug $(MOD).ko
 	mv $(MOD).ko ../build/$(MOD)-$(KERNEL_VER).ko
 
 debug:
-	$(MAKE) CFLAGS_MODULE='-DDEBUG -Og -g' -C $(KDIR) M=$$PWD
+	$(MAKE) CFLAGS_MODULE='-DDEBUG -Og -g -fno-pie' -C $(KDIR) M=$$PWD
 	mv $(MOD).ko ../build/$(MOD)-$(KERNEL_VER).ko
 
 clean:
