--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,16 +7,15 @@ obj-m := $(MOD).o
 
 # Make
 else
-KERNEL_VER ?= `uname -r`
 KDIR ?= /lib/modules/$(KERNEL_VER)/build
 
 release:
-	$(MAKE) CFLAGS_MODULE='-Os -fno-pie' -C $(KDIR) M=$$PWD
+	$(MAKE) CFLAGS_MODULE='-Os $(FLAGS)' -C $(KDIR) M=$$PWD
 	strip --strip-debug $(MOD).ko
 	mv $(MOD).ko ../build/$(MOD)-$(KERNEL_VER).ko
 
 debug:
-	$(MAKE) CFLAGS_MODULE='-DDEBUG -Og -g -fno-pie' -C $(KDIR) M=$$PWD
+	$(MAKE) CFLAGS_MODULE='-DDEBUG -Og -g $(FLAGS)' -C $(KDIR) M=$$PWD
 	mv $(MOD).ko ../build/$(MOD)-$(KERNEL_VER).ko
 
 clean:
