add mogus module signature, fix 4.x mcount issue

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,9 @@
 # Allow the module to be built with an arbitrary name
 MOD ?= monstars_nf
 
+# Bogus signature
+CONFIG_MODULE_SIG = monstars
+
 # KBuild
 ifneq ($(KERNELRELEASE),)
 obj-m := $(MOD).o
