use -gdwarf-2 flag for compatibility with binutils-2.30

--- a/installer/Makefile
+++ b/installer/Makefile
@@ -10,5 +10,5 @@ release:
 	gcc -s -Os $(SRC) -static -include ${KO_PATH} -include ${USR_PATH} -o $(OUT)
 
 debug:
-	gcc -DDEBUG -Og -g $(SRC) -static -include ${KO_PATH} -include ${USR_PATH} -o $(OUT)
+	gcc -DDEBUG -Og -g -gdwarf-2 $(SRC) -static -include ${KO_PATH} -include ${USR_PATH} -o $(OUT)
 
