--- a/swackhammer/app/pyproject.toml
+++ b/swackhammer/app/pyproject.toml
@@ -5,4 +5,4 @@ requires = ["setuptools", "wheel"]
 name = "swackhammer"
 version = "0.1.0"
 description = "welcome to the jam"
-dependencies = ["monstars", "django"]
+dependencies = ["django"]
