refactor blanko webapp

--- a/blanko/python/app/pyproject.toml
+++ b/blanko/python/app/pyproject.toml
@@ -2,11 +2,10 @@
 requires = ["setuptools", "wheel"]
 
 [project]
-name = "blanko-app"
+name = "blanko-swackhammer"
 version = "0.1.0"
 description = "welcome to the jam"
 dependencies = [
     "blanko-controller",
-    "monstars",
-    "pydantic",
+    "swackhammer",
 ]
