--- a/blanko/python/controller/pyproject.toml
+++ b/blanko/python/controller/pyproject.toml
@@ -7,4 +7,4 @@ version = "0.1.0"
 description = "welcome to the jam"
 
 [project.scripts]
-call-blanko = "blanko.controller.cli:main"
+blanko = "blanko.controller.cli:main"
