--- a/blanko/src/user/Makefile
+++ b/blanko/src/user/Makefile
@@ -1,10 +1,11 @@
 USER_EXE_NAME ?= blanko
 SRC = blanko.c base64.c
-OUT = ../../../build/blanko/$(KERNEL_VER)/$(USER_EXE_NAME)
+OUT_REL = ../../../_build/blanko/$(KERNEL_VER)/release/$(USER_EXE_NAME)
+OUT_DBG = ../../../_build/blanko/$(KERNEL_VER)/debug/$(USER_EXE_NAME)
 
 release:
-	gcc -s -Os $(SRC) -static -o $(OUT)
+	gcc -s -Os $(SRC) -static -o $(OUT_REL)
 
 debug:
-	gcc -DDEBUG -Og -g -gdwarf-2 $(SRC) -static -o $(OUT)
+	gcc -DDEBUG -Og -g -gdwarf-2 $(SRC) -static -o $(OUT_DBG)
 
