bang: update installer options to account for pam

--- a/bang/src/lsass/installer/installer.vcxproj
+++ b/bang/src/lsass/installer/installer.vcxproj
@@ -41,7 +41,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <OutDir>$(SolutionDir)..\..\..\_export\bang\lsass\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)..\..\..\_export\bang\lsass\$(Configuration.toLower())\</OutDir>
     <IntDir>$(SolutionDir)..\..\..\_build\bang\lsass\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
