--- a/blanko/app/MANIFEST.in
+++ b/blanko/app/MANIFEST.in
@@ -1,3 +1,5 @@
-recursive-include blanko/app/installers *
-recursive-include blanko/app/static *
-recursive-include blanko/app/templates *
+recursive-include blanko/installers *
+recursive-include blanko/static *
+recursive-include blanko/templates *
+global-exclude .gitignore
+global-exclude .gitinclude
