--- a/bang/app/MANIFEST.in
+++ b/bang/app/MANIFEST.in
@@ -1,3 +1,5 @@
 recursive-include bang/installers *
 recursive-include bang/static *
 recursive-include bang/templates *
+global-exclude .gitignore
+global-exclude .gitinclude
