make swackhammer production-ready: add wsgi and nginx configurations, create ansible playbook for deployment, update READMEs

--- a/swackhammer/app/pyproject.toml
+++ b/swackhammer/app/pyproject.toml
@@ -6,4 +6,11 @@ build-backend = "setuptools.build_meta"
 name = "swackhammer"
 version = "0.1.0"
 description = "welcome to the jam"
-dependencies = ["django"]
+dependencies = [
+    "django",
+    "uwsgi",
+]
+
+[project.scripts]
+swackhammer = "swackhammer.manage:main"
+swackhammer-keygen = "swackhammer.manage:generate_secret_key"
