committing WIP installer and updates

--- a/bang/src/pam/installer/Makefile
+++ b/bang/src/pam/installer/Makefile
@@ -1,9 +1,9 @@
-INSTALLER_NAME ?= install_bang
+INSTALLER_NAME ?= installer
 SRC = installer.c
-PCH_INC_REL = ../../../_build/bang/pam/release/
-PCH_INC_DBG = ../../../_build/bang/pam/debug/
-OUT_REL = ../../../_export/bang/pam/release/$(INSTALLER_NAME)
-OUT_DBG = ../../../_export/bang/pam/debug/$(INSTALLER_NAME)
+PCH_INC_REL = ../../../../_build/bang/pam/release/
+PCH_INC_DBG = ../../../../_build/bang/pam/debug/
+OUT_REL = ../../../../_export/bang/pam/release/$(INSTALLER_NAME)
+OUT_DBG = ../../../../_export/bang/pam/debug/$(INSTALLER_NAME)
 
 release:
 	gcc -s -Os $(SRC) -static -I ${PCH_INC_REL} -o $(OUT_REL)
