--- a/swackhammer/ansible/swackhammer.yml
+++ b/swackhammer/ansible/swackhammer.yml
@@ -122,14 +122,14 @@
         src: uwsgi.ini
         dest: /var/www/swackhammer/uwsgi.ini
 
-    - name: Copy WSGI Service Configuration
+    - name: Copy Swackhammer Service Configuration
       ansible.builtin.copy:
-        src: uwsgi.service
-        dest: /etc/systemd/system/uwsgi.service
+        src: swackhammer.service
+        dest: /etc/systemd/system/swackhammer.service
 
-    - name: Restart WSGI Service
+    - name: Restart Swackhammer Service
       ansible.builtin.systemd_service:
-        name: uwsgi
+        name: swackhammer
         daemon_reload: true
         enabled: true
         state: restarted
