add jam tunes, enable uwsgi logging to disk

--- a/swackhammer/ansible/files/uwsgi.ini
+++ b/swackhammer/ansible/files/uwsgi.ini
@@ -8,6 +8,9 @@ master = true
 processes = 5
 enable-threads = true
 
+logto = /var/log/swackhammer/uwsgi.log
+log-maxsize = 2000000
+
 socket = uwsgi.sock
 chmod-socket = 644
 vacuum = true
