create monstars common helper lib, refactor bang

--- a/bang/src/pam/installer/Makefile
+++ b/bang/src/pam/installer/Makefile
@@ -1,4 +1,4 @@
-INSTALLER_NAME ?= installer
+INSTALLER_NAME ?= bang-installer
 SRC = installer.c
 PCH_INC_REL = ../../../../_build/bang/pam/release/
 PCH_INC_DBG = ../../../../_build/bang/pam/debug/
