swackhammer: fix log permissions, remove bupkus assets

--- a/swackhammer/ansible/swackhammer.yml
+++ b/swackhammer/ansible/swackhammer.yml
@@ -21,6 +21,14 @@
         group: www-data
         mode: '0755'
 
+    - name: Set WSGI Log Permissions
+      ansible.builtin.file:
+        path: /var/log/swackhammer/uwsgi.log
+        state: touch
+        owner: www-data
+        group: www-data
+        mode: '0644'
+
     - name: Set Swackhammer Log Permissions
       ansible.builtin.file:
         path: /var/log/swackhammer/uwsgi.log
