move shared libraries into swackhammer directory

--- a/bupkus/src/installer/bupkus-installer.vcxproj
+++ b/bupkus/src/installer/bupkus-installer.vcxproj
@@ -98,7 +98,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)shared\windows\monstars-lib.vcxproj">
+    <ProjectReference Include="$(SolutionDir)swackhammer\lib\windows\monstars-lib.vcxproj">
       <Project>{ebeb48ab-1129-46ff-8356-a0e275c5d17f}</Project>
     </ProjectReference>
   </ItemGroup>
