--- a/bang/src/lsass/installer/bang-installer.vcxproj
+++ b/bang/src/lsass/installer/bang-installer.vcxproj
@@ -107,7 +107,7 @@
     <ResourceCompile Include="src\installer.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)\shared\windows\monstars-lib.vcxproj">
+    <ProjectReference Include="$(SolutionDir)swackhammer\lib\windows\monstars-lib.vcxproj">
       <Project>{ebeb48ab-1129-46ff-8356-a0e275c5d17f}</Project>
     </ProjectReference>
   </ItemGroup>
