--- a/bupkus/src/listener/bupkus-listener.vcxproj
+++ b/bupkus/src/listener/bupkus-listener.vcxproj
@@ -100,7 +100,7 @@
     <ClInclude Include="inc\bupkus.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)shared\windows\monstars-lib.vcxproj">
+    <ProjectReference Include="$(SolutionDir)swackhammer\lib\windows\monstars-lib.vcxproj">
       <Project>{ebeb48ab-1129-46ff-8356-a0e275c5d17f}</Project>
     </ProjectReference>
   </ItemGroup>
