--- a/swackhammer/ansible/swackhammer.yml
+++ b/swackhammer/ansible/swackhammer.yml
@@ -21,9 +21,17 @@
         group: www-data
         mode: '0755'
 
-    - name: Set Swackhammer Log Permissions
+    - name: Set WSGI Log Permissions
       ansible.builtin.file:
         path: /var/log/swackhammer/uwsgi.log
+        state: touch
+        owner: www-data
+        group: www-data
+        mode: '0644'
+
+    - name: Set Swackhammer Log Permissions
+      ansible.builtin.file:
+        path: /var/log/swackhammer/swackhammer.log
         state: touch
         owner: www-data
         group: www-data
